# agentic-devops-triage

./: .env.example  .gitignore  BENCHMARKS.md  README.md  WHAT_BROKE.md  app.py  demo.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: test_cases_v1.csv  test_cases_v2.csv
data/runbooks/: rb_001_postgres_primary_down.md  rb_002_kubernetes_node_pressure.md  rb_003_api_p99_latency_spike.md  rb_004_5xx_error_surge.md  rb_005_leaked_credentials.md  rb_006_suspicious_login_pattern.md  rb_007_etl_pipeline_failure.md  rb_008_data_freshness_breach.md  rb_009_disk_full.md  rb_010_dns_resolution_failure.md
notebooks/: 01_router_agent.ipynb  02_planner_agent.ipynb  03_react_agent.ipynb  04_tier_comparison.ipynb
prompts/: v1.yaml
src/: __init__.py  agent.py  cli.py  config.py  evaluation.py  planner.py  retrieval.py  router.py  tools.py
tests/: test_agent_loop.py  test_classify_alert.py  test_config.py  test_mock_env.py  test_retrieval.py
